# rush-sh

./: AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  FUNCTIONS_TODO.md  LICENSE.txt  README.md  TODO.md  TRAP_IMPLEMENTATION.md  design.md  test_output.txt
.github/: FUNDING.yml
.github/workflows/: rust.yml
benchmarks/: Cargo.toml  README.md  run_benchmarks.sh  test_quick.sh
benchmarks/src/: benchmark.rs  lib.rs  main.rs  report.rs  test_cases.rs
docs/: architecture.html  benchmark_report.html  benchmarks.html  compliance.html  fd_architecture_plan.md  fd_redirection_compliance.md  features.html  index.html  installation.html  phase1_subshell_implementation_summary.md  phase2_subshell_implementation_summary.md  phase3_command_group_implementation_summary.md  phase4_pipeline_integration_summary.md  script.js  styles.css  subshell_architecture_plan.md  usage.html
examples/: arithmetic_expansion_demo.sh  basic_commands.sh  brace_expansion_demo.sh  break_continue_demo.sh  case_example.sh  command_grouping_demo.sh  complex_example.sh  condensed_cwd_demo.sh  elif_example.sh  fd_redirection_demo.sh  fd_redirections_demo.sh  functions_demo.sh  job_control_demo.sh  parameter_expansion_demo.sh  pipes_example.sh  positional_parameters_demo.sh  redirections_example.sh  return_demo.sh  set_demo.sh  test_builtin_demo.sh  trap_demo.sh  umask_demo.sh  until_demo.sh  variables_example.sh
plans/: fd_implementation.md  redirection_implementation.md  set_builtin_implementation.md  set_builtin_implementation_complete.md  subshell_implementation_overview.md  subshell_phase1_basic.md  subshell_phase2_advanced.md  subshell_phase3_optimization.md  unused_functions_implementation.md
plans/fd/: 01-architecture-overview.md  02-fdmanager-api.md  03-lexer-extensions.md  04-parser-extensions.md  05-executor-integration.md  06-state-integration.md  07-test-strategy.md  08-implementation-roadmap.md  09-posix-compliance.md  10-implementation-roadmap.md  README.md
src/: arithmetic.rs  brace_expansion.rs  builtins.rs  completion.rs  executor.rs  fd_manager.rs  lexer.rs  lib.rs  main.rs  parameter_expansion.rs  parser.rs  script_engine.rs  state.rs
src/builtins/: builtin_alias.rs  builtin_bg.rs  builtin_bracket.rs  builtin_break.rs  builtin_cd.rs  builtin_colon.rs  builtin_continue.rs  builtin_declare.rs  builtin_dirs.rs  builtin_dot.rs  builtin_echo.rs  builtin_env.rs  builtin_exit.rs  builtin_export.rs  builtin_fg.rs  builtin_help.rs  builtin_jobs.rs  builtin_kill.rs  builtin_popd.rs  builtin_pushd.rs  (+16 more)
tests/: phase2_posix_compliance.sh  subshell_tests.rs
(+45 files in other folders)
