[workspace]
members = [
   ".",
   "benchmarks"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[package]
name = "rush-sh"
version = "0.4.3"
edition = "2024"
description = "A POSIX sh-compatible shell written in Rust"
license = "MIT"
documentation = "https://github.com/drewwalton19216801/rush-sh"
repository = "https://github.com/drewwalton19216801/rush-sh"

[lib]
name = "rush_sh"
path = "src/lib.rs"

[dependencies]
rustyline = { version = "17.0.1", features = ["signal-hook"] }
nix = { version = "0.30.1", features = ["signal"] }
libc = "0.2.176"
signal-hook = "0.3"
glob = "0.3"
clap = { version = "4.5.48", features = ["derive"] }
lazy_static = "1.5"
regex = "1.10"