[workspace]
members = [".", "benchmarks"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "rush-sh"
version = "0.6.2"
edition = "2024"
description = "A POSIX sh-compatible shell written in Rust"
license = "MIT"
documentation = "https://drewwalton19216801.github.io/rush-sh/"
repository = "https://github.com/drewwalton19216801/rush-sh"

[lib]
name = "rush_sh"
path = "src/lib.rs"

[dependencies]
rustyline = { version = "17.0.2", features = ["signal-hook"] }
signal-hook = "0.4.1"
glob = "0.3.3"
clap = { version = "4.5.54", features = ["derive"] }
lazy_static = "1.5.0"
libc = "0.2.180"
